--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   }
   .section-title{ font-weight:700; margin:0 0 8px; color:#cbd5e1 }
   .row{ display:flex; gap:12px; flex-wrap:wrap } .field{ flex:1 1 180px; min-width:180px }
-  label{ display:block; font-size:.85rem; color:var(--muted); margin:0 0 6px }
+  label{ display:block; font-size:.85rem; color:#a0aec0; margin:0 0 6px }
   input[type="text"],input[type="number"],select{
     width:100%; padding:12px 14px; border-radius:12px; border:1px solid #243244;
     background:#0a1220; color:#e5e7eb; font-size:1rem; outline:none
@@ -413,5 +413,8 @@
   initLabels();
   goTo('page-home');
 </script>
+
+<!-- ► AJOUT ICI : auto-patch QR ScanProf -->
+<script src="./scanprof-qr-auto.js" defer></script>
 </body>
 </html>
